# Container-encapsulator

./: .gitignore  CLAUDE.md  CMakeLists.txt  FFMPEG_H265_FIX_SUMMARY.md  IMPLEMENTATION_STATUS.md  ProMuxer.pro  ProMuxer_resource.rc  QUICK_START.md  README.md  appicon.rc  bug_report.md  build.bat  prompt.md  test_ffmpeg_h265.bat  ui_MainWindow.h
.claude/: settings.local.json
.claude/agents/: codebase-architect.md  qa-tester.md  qt-hdr-bug-fixer.md
patches/: fix-ffmpeg-metadata-integration.patch
resources/: ICON_CREATION_GUIDE.md  app.manifest  app.rc
src/: main.cpp
src/core/: FileProcessor.cpp  FileProcessor.h  MediaAnalyzer.cpp  MediaAnalyzer.h  MuxingTask.cpp  MuxingTask.h
src/ui/: FFmpegSetupDialog.cpp  FFmpegSetupDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
tests/: PatchVerificationFramework.h  ProMuxerTests.pro  TestAutoAnalysis.cpp  TestAutoAnalysis.h  TestEndToEndWorkflow.cpp  TestEndToEndWorkflow.h  TestFFmpegCommandGeneration.cpp  TestFFmpegCommandGeneration.h  TestHelper.h  TestLogColorAdaptation.cpp  TestLogColorAdaptation.h
